deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app1
  namespace: mouni
  labels:
    app: mouni2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mouni2
  template:
    metadata:
      labels:
        app: mouni2
    spec:
      containers:
        - name: mycont2
          image: mouni71/newyoker
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: mouni
spec:
  selector:
    app: mouni2
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
