depoy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: mouni
  labels:
    app: mouni1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mouni1
  template:
    metadata:
      labels:
        app: mouni1
    spec:
      containers:
        - name: mycont1
          image: mouni71/fandom
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: mouni
spec:
  selector:
    app: mouni1
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
