ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mouni71/fandom
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /mouni71/newyoker
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
